Bug 469774 - Never descend into nsMenuPopupFrames when building display lists. Fixes drawing bugs that occurred when a caret was visible in a popup. r=roc